--- a/LeagueManagement/Views/AspNetRoles/Delete.cshtml
+++ b/LeagueManagement/Views/AspNetRoles/Delete.cshtml
@@ -6,27 +6,36 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>AspNetRole</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+<div class="col-md-12 col-sm-12 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <h1>Delete</h1>
+        <h2>Are you sure you want to delete this?</h2>
+           <h4>AspNetRole</h4>
+        
+        <form class="form-horizontal team">
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">
+                    @Html.DisplayNameFor(model => model.Name)
+                </label> <div class="col-sm-8">
 
-    </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+                    @Html.DisplayFor(model => model.Name)
+                </div>
+            </div>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
+            }
+            </form>
+</div>
+
 </div>
