--- a/LeagueManagement/Views/Seasons/Create.cshtml
+++ b/LeagueManagement/Views/Seasons/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LMEntities.Models.AspNetRole
+﻿@model LMEntities.Models.Season
 
 @{
     ViewBag.Title = "Create";
@@ -9,14 +9,13 @@
 <div class="col-md-12 col-sm-12 mininumheight">
     <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
 
-       
 
-            @using (Html.BeginForm())
+          @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
 
                 <div class="form-horizontal">
-                    <h4>AspNetRole</h4>
+                    <h4>Season</h4>
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
@@ -36,6 +35,22 @@
                     </div>
 
                     <div class="form-group">
+                        @Html.LabelFor(model => model.LeagueId, "LeagueId", htmlAttributes: new { @class = "col-sm-4 control-label" })
+                        <div class="col-md-8">
+                            @Html.DropDownList("LeagueId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.LeagueId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.OrganizationId, "OrganizationId", htmlAttributes: new { @class = "col-sm-4 control-label" })
+                        <div class="col-md-8">
+                            @Html.DropDownList("OrganizationId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.OrganizationId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <div class="col-md-offset-2 col-md-8">
                             <input type="submit" value="Create" class="btn btn-default" />
                         </div>
@@ -46,11 +61,10 @@
             <div>
                 @Html.ActionLink("Back to List", "Index")
             </div>
-       
-    </div>
+
+            @section Scripts {
+                @Scripts.Render("~/bundles/jqueryval")
+            }
+           
 </div>
-
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+</div>
