--- a/LeagueManagement/Views/Schedules/Create.cshtml
+++ b/LeagueManagement/Views/Schedules/Create.cshtml
@@ -6,6 +6,23 @@
 
 <h2>Create</h2>
 
+<script src="~/Scripts/jquery-ui.min.js"></script>
+<link href="~/css/jquery-ui.min.css" rel="stylesheet" />
+
+
+<script type="text/javascript">
+
+
+    $(document).ready(function () {
+
+
+        $('#StartTime').datepicker();
+        $('#EndTime').datepicker();
+
+    });
+</script>
+
+
 <div class="col-md-12 col-sm-12 mininumheight">
     <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
 
