--- a/LeagueManagement/Views/Schedules/Index.cshtml
+++ b/LeagueManagement/Views/Schedules/Index.cshtml
@@ -12,13 +12,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Ground.Name)
+            @Html.DisplayNameFor(model => model.GroundId)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Season.Name)
+            @Html.DisplayNameFor(model => model.SeasonId)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Year.Id)
+            @Html.DisplayNameFor(model => model.YearId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.HomeTeamId)
@@ -26,74 +26,74 @@
         <th>
             @Html.DisplayNameFor(model => model.VisitorTeamId)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.UmpireId)
-        </th>
+        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.StartTime)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.EndTime)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedOn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModfiedBy)
-        </th>
+        @*<th>
+                @Html.DisplayNameFor(model => model.CreatedOn)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedBy)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ModifiedOn)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ModfiedBy)
+            </th>*@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ground.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Season.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Year.Id)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HomeTeamId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.VisitorTeamId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UmpireId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedOn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedOn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModfiedBy)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Ground.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Season.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Year.YearNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Team.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Team1.Name)
+            </td>
+            @*<td>
+                    @Html.DisplayFor(modelItem => item.UmpireId)
+                </td>*@
+            <td>
+                @Html.DisplayFor(modelItem => item.StartTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EndTime)
+            </td>
+            @*<td>
+                    @Html.DisplayFor(modelItem => item.CreatedOn)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedBy)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ModifiedOn)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ModfiedBy)
+                </td>*@
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
