--- a/LeagueManagement/Views/Shared/_Layout.cshtml
+++ b/LeagueManagement/Views/Shared/_Layout.cshtml
@@ -82,9 +82,9 @@
                             <li class="dropdown">
                                 <a href="#contact" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Results</a>
                                 <ul class="dropdown-menu">
+                                    @*<li><a href="#">Another action</a></li>
                                     <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href="#">Something else here</a></li>*@
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -99,8 +99,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams </span></a>
                                 <ul class="dropdown-menu">
                                     <li>@Html.ActionLink("Teams", "Index", "Teams")</li>
-                                    
-
+                                    <li>@Html.ActionLink("Team Members", "Index", "TeamMembers")</li>
                                 </ul>
                             </li>
                             <li class="dropdown">
