--- a/LeagueManagement/Views/Schedules/Create.cshtml
+++ b/LeagueManagement/Views/Schedules/Create.cshtml
@@ -1,106 +1,96 @@
 ﻿@model LMEntities.Models.Schedule
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Schedule";
 }
-
-<h2>Create</h2>
 
 <script src="~/Scripts/jquery-ui.min.js"></script>
 <link href="~/css/jquery-ui.min.css" rel="stylesheet" />
 
 
-<script type="text/javascript">
+<script src="~/Scripts/jquery-ui-timepicker-addon.js"></script>
+<link href="~/css/jquery-ui-timepicker-addon.css" rel="stylesheet" />
 
 
-    $(document).ready(function () {
+<div class="col-md-8 col-sm-8 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-
-        $('#StartTime').datepicker();
-        $('#EndTime').datepicker();
-
-    });
-</script>
-
-
-<div class="col-md-12 col-sm-12 mininumheight">
-    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-
-
-           @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-
-                <div class="form-horizontal">
-                    <h4>Schedule</h4>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.SeasonId, "SeasonId", htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.DropDownList("SeasonId", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.SeasonId, "", new { @class = "text-danger" })
-                        </div>
+           <div class="form-horizontal">
+                <h4>Create Schedule</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.SeasonId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @*@Html.DropDownList("SeasonId",  , "Please Select", htmlAttributes: new { @class = "form-control" })*@
+                        @Html.DropDownListFor(model => model.SeasonId,ViewBag.SeasonId as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.SeasonId, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.YearId, "YearId", htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.DropDownList("YearId", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.YearId, "", new { @class = "text-danger" })
-                        </div>
+               
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.HomeTeamId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(model => model.HomeTeamId, ViewBag.HomeTeamId as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
+                         @Html.ValidationMessageFor(model => model.HomeTeamId, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.HomeTeamId, "HomeTeamId", htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.DropDownList("HomeTeamId", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.HomeTeamId, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.VisitorTeamId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(model => model.VisitorTeamId, ViewBag.VisitorTeamId as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.VisitorTeamId, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.VisitorTeamId, "VisitorTeamId", htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.DropDownList("VisitorTeamId", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.VisitorTeamId, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.UmpireId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @*@Html.EditorFor(model => model.UmpireId, new { htmlAttributes = new { @class = "form-control" } })*@
+                        @Html.DropDownListFor(model => model.UmpireId, ViewBag.Umpires as IEnumerable<SelectListItem>, "Please Select", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.UmpireId, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.UmpireId, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.UmpireId, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.UmpireId, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.GroundId, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.DropDownList("GroundId", null, "Please Select", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.GroundId, "", new { @class = "text-danger" })
                     </div>
+                </div>
+               <div class="form-group">
+                   @Html.LabelFor(model => model.ScheduleDate, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                   <div class="col-md-8">
+                       @Html.EditorFor(model => model.ScheduleDate, new { htmlAttributes = new { @class = "form-control" } })
+                       @Html.ValidationMessageFor(model => model.ScheduleDate, "", new { @class = "text-danger" })
+                   </div>
+               </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.GroundId, "GroundId", htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.DropDownList("GroundId", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.GroundId, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control timepicker1" } })
+                      
+                        @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control timepicker1" } })
+                        @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "col-sm-4 control-label" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
+                @*<div class="form-group">
                         @Html.LabelFor(model => model.CreatedOn, htmlAttributes: new { @class = "col-sm-4 control-label" })
                         <div class="col-md-8">
                             @Html.EditorFor(model => model.CreatedOn, new { htmlAttributes = new { @class = "form-control" } })
@@ -130,23 +120,110 @@
                             @Html.EditorFor(model => model.ModfiedBy, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.ModfiedBy, "", new { @class = "text-danger" })
                         </div>
-                    </div>
+                    </div>*@
 
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-8">
-                            <input type="submit" value="Create" class="btn btn-default" />
-                        </div>
+                <div class="form-group">
+                    <div class="col-md-offset-4 col-md-10">
+                        <input type="submit" value="Create" class="btn btn-default create" />
                     </div>
                 </div>
-            }
+                <div class="form-group">
 
-            <div>
-                @Html.ActionLink("Back to List", "Index")
+                    <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
+
+
+                </div>
             </div>
+        }
 
-            @section Scripts {
-                @Scripts.Render("~/bundles/jqueryval")
-            }
-        
     </div>
 </div>
+<div class="col-md-4 col-sm-4">
+    <div class="maintabs">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="active"><a href="#tab-1" role="tab" data-toggle="tab">Results</a></li>
+            <li class=""><a href="#tab-2" role="tab" data-toggle="tab">Schedule</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane fade in active" id="tab-1">
+                <ul class="schedulelist">
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                </ul>
+            </div><!--/.tab-pane -->
+            <div class="tab-pane fade in" id="tab-2">
+                <ul class="schedulelist">
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                </ul>
+            </div><!--/.tab-pane -->
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
+<script type="text/javascript"> 
+    
+$('#ScheduleDate').datepicker();
+   
+    $('.timepicker1').timepicker();
+</script>
