--- a/LeagueManagement/Views/Schedules/Edit.cshtml
+++ b/LeagueManagement/Views/Schedules/Edit.cshtml
@@ -6,9 +6,9 @@
 
 <h2>Edit</h2>
 
-<div class="col-md-12 col-sm-12 mininumheight">
-    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
 
+<div class="col-md-8 col-sm-8 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
 
         @using (Html.BeginForm())
             {
@@ -28,13 +28,6 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.YearId, "YearId", htmlAttributes: new { @class = "col-sm-4 control-label" })
-                    <div class="col-md-8">
-                        @Html.DropDownList("YearId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.YearId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
 
                 <div class="form-group">
@@ -117,21 +110,105 @@
                     </div>
                 </div>
 
+
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-8">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                    <div class="col-md-offset-4 col-md-10">
+                        <input type="submit" value="Save" class="btn btn-default create" />
                     </div>
                 </div>
+                <div class="form-group">
+
+                    <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
+
+
+                </div>
             </div>
+
         }
 
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
 
     </div>
 </div>
+
+<div class="col-md-4 col-sm-4">
+    <div class="maintabs">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="active"><a href="#tab-1" role="tab" data-toggle="tab">Results</a></li>
+            <li class=""><a href="#tab-2" role="tab" data-toggle="tab">Schedule</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane fade in active" id="tab-1">
+                <ul class="schedulelist">
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                </ul>
+            </div><!--/.tab-pane -->
+            <div class="tab-pane fade in" id="tab-2">
+                <ul class="schedulelist">
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                </ul>
+            </div><!--/.tab-pane -->
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
