--- a/LeagueManagement/Views/Shared/_Layout.cshtml
+++ b/LeagueManagement/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -20,7 +22,7 @@
     <![endif]-->
 
     @Scripts.Render("~/bundles/jquery")
-       @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
     <div class="wrapper">
@@ -54,7 +56,7 @@
                     </div>
 
                     <!-- Logo -->
-                    <a class="logo" href="@Url.Action("Index","Home")">
+                    <a class="logo" href="index.html">
                         <img src="~/images/logo.png" alt="logo">
                     </a>
 
@@ -77,85 +79,93 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li @*class="active"*@>@Html.ActionLink("Home","Index","Home")</li>
-                            <li>@Html.ActionLink("Schedule", "Index", "Schedules")</li>
+                            <li>@Html.ActionLink("Home","Index","Home")</li>
+                            <li>@Html.ActionLink("Schedule","Index","Schedules")</li>
                             <li class="dropdown">
                                 <a href="#contact" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Results</a>
                                 <ul class="dropdown-menu">
-                                    @*<li><a href="#">Another action</a></li>
+                                    <li><a href="#">Action</a></li>
                                     <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>*@
+                                    <li><a href="#">Something else here</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Statistics </span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Action</a></li>
                                     <li><a href="#">Another action</a></li>
                                     <li><a href="#">Something else here</a></li>
+
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams </span></a>
+                              
                                 <ul class="dropdown-menu">
                                     <li>@Html.ActionLink("Teams", "Index", "Teams")</li>
                                     <li>@Html.ActionLink("Team Members", "Index", "TeamMembers")</li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Umpires </span></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    @*<li><a href="#">Something else here</a></li>*@
 
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grounds </span></a>
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Ground", "Index", "Grounds")</li>
-                                  
-                                </ul>
+                                @Html.ActionLink("Umpires","Index","Umpires")
+                                @*<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Umpires </span></a>*@
+                                @*<ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+
+                                </ul>*@
+                            </li>
+                            <li class="dropdown">
+                                @Html.ActionLink("Grounds","Index","Grounds")
+                                @*<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grounds </span></a>*@
+                                @*<ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+
+                                </ul>*@
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Previous Season </span></a>
-                                <ul class="dropdown-menu">
+                                @*<ul class="dropdown-menu">
                                     <li><a href="#">Action</a></li>
                                     <li><a href="#">Another action</a></li>
                                     <li><a href="#">Something else here</a></li>
 
-                                </ul>
+                                </ul>*@
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">League      </span></a>
-                                <ul class="dropdown-menu">
+                                @*<ul class="dropdown-menu">
                                     <li><a href="#">Action</a></li>
                                     <li><a href="#">Another action</a></li>
                                     <li><a href="#">Something else here</a></li>
 
-                                </ul>
+                                </ul>*@
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Galleries      </span></a>
-                                <ul class="dropdown-menu">
+                                @*<ul class="dropdown-menu">
                                     <li><a href="#">Action</a></li>
                                     <li><a href="#">Another action</a></li>
                                     <li><a href="#">Something else here</a></li>
 
-                                </ul>
+                                </ul>*@
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MyMCLA </span></a>
-                                <ul class="dropdown-menu">
+                                @*<ul class="dropdown-menu">
                                     <li><a href="#">Action</a></li>
                                     <li><a href="#">Another action</a></li>
                                     <li><a href="#">Something else here</a></li>
 
-                                </ul>
+                                </ul>*@
                             </li>
                             <li>
-                                <a href="#">About Us</a>
+                                <a href="#">About Us </span></a>
                             </li>
 
                         </ul>
@@ -168,10 +178,9 @@
         </div>
 
         <div class="container">
-            <div class="row">
-
-                               @RenderBody()
-            </div>
+           <div class="row">
+               @RenderBody()
+           </div>
 
         </div>
         <section class="footer">
@@ -188,15 +197,180 @@
                     </ul>
                 </div>
                 <div class="col-md-4 col-sm-4">
-                    <div class="copyrights pull-right">Copyright @@ @DateTime.Now.Year - NATA Cricket League Association | All rights reserved..</div>
+                    <div class="copyrights pull-right">@@ @DateTime.Now.Year North American Telugu Association . All Rights Reserved.</div>
                 </div>
             </div>
         </section>
 
     </div>
 
+
+    <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+        <div class="modal-dialog">
+            <div class="loginmodal-container">
+                <h1>Login to Your Account</h1><br>
+
+                <form id="loginform" class="form-horizontal" role="form">
+
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="username or email">
+                    </div>
+
+                    <div style="margin-bottom: 25px" class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                        <input id="login-password" type="password" class="form-control" name="password" placeholder="password">
+                    </div>
+
+
+
+                    <div class="input-group">
+                        <div class="checkbox">
+                            <label>
+                                <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+                            </label>
+                            <label>
+                                <a href="#">Forgot Password</a>
+                            </label>
+                        </div>
+                    </div>
+
+
+                    <div style="margin-top:10px" class="form-group">
+                        <!-- Button -->
+
+                        <div class="col-sm-12 controls">
+                            <a id="btn-login" href="#" class="btn btn-success">Login  </a>
+
+
+                        </div>
+                    </div>
+
+
+
+                </form>
+
+                <div class="login-help">
+                    <a href="#">Register</a> - <a href="#">Forgot Password</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="login-modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+        <div class="modal-dialog">
+            <div class="loginmodal-container">
+
+                <div class="row">
+                    <div class="col-lg-12"> <h2 class="wellcome">Register Information</h2></div>
+
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label">Sales:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Sales">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label">Purchasing:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Purchasing">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> Company:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Company">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> Contact Name:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Contact Name">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> Address:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Address">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> Address Line 2:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Address Line 2">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> City:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="City">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> State:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="State">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> Zip:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Zip">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> Country:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Country">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> Phone:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Phone">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> <span>*</span> Email</label>
+                            <div class="col-sm-8">
+                                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-4 control-label"> </label>
+                            <div class="col-sm-12 col-md-offset-4">
+                                <button type="submit" class="btn btn-default signin">Sign in</button>  <button type="submit" class="btn btn-default reset">reset</button>
+                            </div>
+                        </div>
+                    </form>
+
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-   @* <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>*@
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>*@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="~/js/bootstrap.min.js"></script>
     <script>
@@ -212,8 +386,9 @@
         }
     );
 });</script>
-  
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+
+   
 </body>
+@Scripts.Render("~/bundles/bootstrap")
+@RenderSection("scripts", required: false)
 </html>
