--- a/LeagueManagement/css/style.css
+++ b/LeagueManagement/css/style.css
@@ -1,7 +1,8 @@
 body {
 	font-family: 'Open Sans', sans-serif;
-	background:url(../images/bg.png) fixed center top no-repeat;
-	background-size: cover;
+	/*background:url(../images/bg.png) fixed center top no-repeat;
+	background-size: cover;*/
+	background:#ececec;
 	
 }
 h1, h2, h3, h4, h5, h6 {
@@ -20,6 +21,7 @@ p {
 	max-width:100%;
 	margin:0 auto;
 	background:#FFFFFF;
+	box-shadow:0px 0px 2px #666;
 }
 
 /* social meadia*/
@@ -554,6 +556,7 @@ font-size:15px
 }
 .form-group label {
 	color:#666666;
+	text-align:left !important;
 }
 .team label {
 	padding-top:0 !important;
@@ -575,5 +578,42 @@ font-size:15px
 	text-align:left !important;
 }
 
-/* team table css* /
+
+/* team table css */
+
+.loginmodal-container {
+    padding: 30px;
+    max-width: 500px;
+    width: 100% !important;
+    background-color: #F7F7F7;
+    margin: 0 auto;
+    border-radius: 2px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+
+}
+.signin {
+	background:#0B4376;
+	color:#FFFFFF;
+	border:none;
+}
+
+.signin:hover {
+	background:#b90c10;
+	color:#FFFFFF;
+	border:none;
+}
+
+.reset {
+	background:#b90c10;
+	color:#FFFFFF;
+	border:none;
+	text-transform:capitalize;
+}
+.reset:hover {
+	background:#0B4376;
+	color:#FFFFFF;
+	border:none;
+}
+
 
