--- a/LeagueManagement/Views/Schedules/Delete.cshtml
+++ b/LeagueManagement/Views/Schedules/Delete.cshtml
@@ -4,109 +4,178 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="col-md-8 col-sm-6 mininumheight">
+    <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
+        @using (Html.BeginForm())
+            {
+            @Html.AntiForgeryToken()
+            <h1>Delete Schedule</h1>
+            <h3>Are you sure you want to delete this schedule?</h3>
+            <div class="form-horizontal team">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Schedule</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Ground.Name)
-        </dt>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.GroundId)
+                    </label>
+                    <div class="col-sm-8">
+                        @Html.DisplayFor(model => model.Ground.Name)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.SeasonId)
+                    </label><div class="col-sm-8">
 
-        <dd>
-            @Html.DisplayFor(model => model.Ground.Name)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Season.Name)
-        </dt>
+                        @Html.DisplayFor(model => model.Season.Name)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.HomeTeamId)
+                    </label><div class="col-sm-8">
 
-        <dd>
-            @Html.DisplayFor(model => model.Season.Name)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.HomeTeamId)
-        </dt>
+                        @Html.DisplayFor(model => model.Team.Name)
+                    </div>
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.HomeTeamId)
-        </dd>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.VisitorTeamId)
+                    </label><div class="col-sm-8">
+                        @Html.DisplayFor(model => model.Team1.Name)
+                    </div>
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.VisitorTeamId)
-        </dt>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.UmpireId)
+                    </label><div class="col-sm-8">
 
-        <dd>
-            @Html.DisplayFor(model => model.VisitorTeamId)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UmpireId)
-        </dt>
+                        @Html.DisplayFor(model => model.Umpire.UserName)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.ScheduleDate)
+                    </label><div class="col-sm-8">
+                        @Html.DisplayFor(model => model.ScheduleDate)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.StartTime)
+                    </label><div class="col-sm-8">
 
-        <dd>
-            @Html.DisplayFor(model => model.UmpireId)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartTime)
-        </dt>
+                        @Html.DisplayFor(model => model.StartTime)
+                    </div>
+                </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartTime)
-        </dd>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                        @Html.DisplayNameFor(model => model.EndTime)
+                    </label><div class="col-sm-8">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndTime)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndTime)
-        </dd>
+                        @Html.DisplayFor(model => model.EndTime)
+                    </div>
+                </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </dt>
+                <div class="form-group">
+                    <div class="col-md-offset-4 col-md-10">
+                        <input type="submit" value="Delete" class="btn btn-default create" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-6 control-label">
+                        <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-md-8 control-label back" } })</b>
+                    </label>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedOn)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModifiedOn)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModifiedOn)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModfiedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModfiedBy)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+                </div>
+            </div>
+        }
+    </div>
 </div>
+<div class="col-md-4 col-sm-4">
+    <div class="maintabs">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="active"><a href="#tab-1" role="tab" data-toggle="tab">Results</a></li>
+            <li class=""><a href="#tab-2" role="tab" data-toggle="tab">Schedule</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane fade in active" id="tab-1">
+                <ul class="schedulelist">
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                </ul>
+            </div><!--/.tab-pane -->
+            <div class="tab-pane fade in" id="tab-2">
+                <ul class="schedulelist">
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                    <li>
+                        <div class="">
+                            Final: <a href="#"> Blue Whales v Garudas</a>
+                        </div>
+                        <div class="">09/26/2015 - Blue Whales won by 46 runs</div>
+                    </li>
+                </ul>
+            </div><!--/.tab-pane -->
+        </div>
+    </div>
+</div>
+
+
