--- a/LeagueManagement/Views/Schedules/Edit.cshtml
+++ b/LeagueManagement/Views/Schedules/Edit.cshtml
@@ -4,9 +4,6 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-
-
 <div class="col-md-8 col-sm-8 mininumheight">
     <div id="loginbox" style="margin-top:10px;" class="mainbox col-md-9 col-md-offset-1 col-sm-9">
 
@@ -15,7 +12,7 @@
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
-                <h4>Schedule</h4>
+                <h4>Edit Schedule</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.Id)
@@ -55,7 +52,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.GroundId, "GroundId", htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    @Html.LabelFor(model => model.GroundId, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
                         @Html.DropDownList("GroundId", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.GroundId, "", new { @class = "text-danger" })
@@ -63,9 +60,18 @@
                 </div>
 
                 <div class="form-group">
+                    @Html.LabelFor(model => model.ScheduleDate, htmlAttributes: new { @class = "col-sm-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.ScheduleDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ScheduleDate, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
                     @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control timepicker1" } })
+
                         @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -73,12 +79,12 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control timepicker1" } })
                         @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-                <div class="form-group">
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.CreatedOn, htmlAttributes: new { @class = "col-sm-4 control-label" })
                     <div class="col-md-8">
                         @Html.EditorFor(model => model.CreatedOn, new { htmlAttributes = new { @class = "form-control" } })
@@ -108,7 +114,7 @@
                         @Html.EditorFor(model => model.ModfiedBy, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.ModfiedBy, "", new { @class = "text-danger" })
                     </div>
-                </div>
+                </div>*@
 
 
                 <div class="form-group">
@@ -117,9 +123,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-
-                    <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-sm-12 control-label back" } })</b>
-
+                    <label for="inputEmail3" class="col-sm-6 control-label">
+                        <b> @Html.ActionLink("Back To List", "Index", new { htmlAttributes = new { @class = "col-md-8 control-label back" } })</b>
+                        </label>
 
                 </div>
             </div>
@@ -212,3 +218,17 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+<script src="~/Scripts/jquery-ui.min.js"></script>
+<link href="~/css/jquery-ui.min.css" rel="stylesheet" />
+
+
+<script src="~/Scripts/jquery-ui-timepicker-addon.js"></script>
+<link href="~/css/jquery-ui-timepicker-addon.css" rel="stylesheet" />
+
+<script type="text/javascript">
+
+
+$('#ScheduleDate').datepicker();
+
+$('.timepicker1').timepicker();
+</script>
